added ptag stuff to index

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <header>hello</header>
     <main>hi</main>
+    <p>stuff</p>
     <script src="./js/script.js"></script>
 </body>
 </html>
