--- a/index.html
+++ b/index.html
@@ -1,16 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fruktur&family=Lily+Script+One&family=Montserrat:wght@500&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./assets/CSS/style.css" />
     <title>Document</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-    <header>hello</header>
-    <main>hi</main>
-    <p>stuff</p>
-    <script src="./js/script.js"></script>
-</body>
+  </head>
+  <body>
+    <header>
+      <div class="title">Allergy Maps</div>
+      <nav>
+        <ul id="links">
+          <li><a href="#about">About</a></li>
+          <li><a href="">GitHub</a></li>
+          <li><a href="">**empty**</a></li>
+          <li><a href="">**empty**</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <!-- Hero section -->
+      <div id="hero"></div>
+      <!-- card in middle with form for allergy maps -->
+      <div class="card">
+        <form id="AMform" action="">
+          <input type="text" placeholder="example form" />
+          <button>Search</button>
+        </form>
+      </div>
+
+      <!-- explanation -->
+      <div id="about">
+        <div class="sidebar"> About </div>
+        <div class="content">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed beatae
+          porro velit excepturi illum libero? Velit, laborum dicta, a tenetur
+          fuga possimus magni recusandae ab rem ullam, quidem eveniet eligendi.
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo culpa
+          tenetur, quas, natus autem aperiam voluptatum deleniti dolor eos hic
+          mollitia possimus similique dignissimos, consectetur rerum! Aliquam
+          illo repellendus sint. Lorem ipsum dolor sit amet consectetur
+          adipisicing elit. Corrupti libero quo, et accusantium aliquam nihil
+          deleniti ad est. Necessitatibus delectus magnam minus possimus? Iusto
+          odio iure et vel sapiente optio! Eveniet, voluptatem! Lorem ipsum
+          dolor sit amet consectetur adipisicing elit. Porro optio dolores
+          doloremque fugiat tempore reiciendis beatae quo et quibusdam
+          accusamus. A illum ipsam alias natus odio fuga ullam esse aut!
+          Reprehenderit sint dignissimos ex debitis commodi voluptate iusto
+          doloribus possimus. Veniam, porro expedita nostrum obcaecati
+          doloribus, maiores, asperiores quaerat ratione esse illum odit ipsa
+          aut voluptatum totam repudiandae explicabo rerum. Molestias maxime
+          mollitia blanditiis distinctio repellendus ipsum incidunt delectus
+          voluptates dolore iure ratione, sapiente sunt nostrum explicabo, eaque
+          voluptatum. Et animi dolorum, eaque vitae eum harum non similique
+          reprehenderit natus. Quia, quod accusantium. Quis, odio iure. Nulla
+          magnam alias explicabo quos molestias quia eos ipsum voluptas vitae
+          optio. Voluptatum illum dolorem quasi dignissimos eos assumenda ipsum
+          earum harum rem itaque? Incidunt deleniti corporis aliquid! Optio
+          minima nemo aut dignissimos est accusamus neque nisi velit dolore?
+          Ducimus dolor quod, vitae expedita nisi autem ad dolorem voluptatem,
+          dolorum veritatis mollitia blanditiis nobis! Inventore iste temporibus
+          odit sint quo, culpa exercitationem consequatur animi numquam, eos
+          porro minus, aperiam fuga. Eum, sint non repudiandae doloribus rerum
+          vel aspernatur. Odio a illo veritatis ullam architecto? Lorem ipsum
+          dolor sit amet consectetur adipisicing elit. Est incidunt modi iusto
+          omnis numquam magnam odit inventore aperiam! Et vero sunt culpa nam
+          sapiente illo natus quis recusandae inventore. Illum? Laudantium
+          adipisci modi incidunt excepturi ab ex voluptatum ullam reprehenderit
+          nemo impedit accusamus, quos, ipsum placeat enim alias magnam
+          voluptatibus. Doloremque nesciunt necessitatibus numquam voluptate id
+          porro nam, voluptatem consequuntur? Esse modi at quibusdam labore
+          provident, sunt excepturi ad inventore voluptatum, dolore architecto
+          sapiente sint placeat sequi vero fuga nam aspernatur. Sit dolor
+          tempore modi fuga ipsum ullam, neque nulla. Repellat ipsum omnis, quia
+          dicta vero, consequuntur voluptate laboriosam distinctio consectetur
+          eius iusto quidem quisquam harum facilis, temporibus dolores. Eveniet
+          possimus quas odit omnis necessitatibus neque. Blanditiis nam in est.
+          Vel commodi saepe autem minus, vero reprehenderit rerum voluptates
+          omnis beatae aliquam ea, quod necessitatibus fuga. Incidunt ut beatae
+          in totam mollitia facere autem, vitae architecto minima debitis ab
+          rerum. Odit ullam delectus facere modi nam ratione aut, in voluptatem
+          eum consequuntur fugit iste pariatur, sit non aspernatur nisi laborum
+          ducimus tenetur, aliquam quidem ipsum amet. Repellendus minus
+          distinctio inventore. Mollitia nulla adipisci dignissimos. Natus
+          temporibus tempore fugiat tenetur doloremque alias laboriosam totam,
+          dolore nam voluptatibus sapiente, praesentium aspernatur ad inventore
+          sunt soluta ullam. Impedit soluta ab quo officiis eius! Inventore sint
+          tenetur aliquid nostrum nobis ex cumque labore quos cum quis ratione
+          placeat vero neque eos accusantium consequuntur iste explicabo, error
+          nulla! Incidunt, perspiciatis velit. Officia perferendis inventore
+          illum.
+        </div>
+      </div>
+    </main>
+    <footer></footer>
+    <script src="./assets/style.css"></script>
+  </body>
 </html>
