--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
       <!-- explanation -->
       <div id="about">
-        <div class="sidebar"> About </div>
+        <div class="sidebar">About</div>
         <div class="content">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed beatae
           porro velit excepturi illum libero? Velit, laborum dicta, a tenetur
@@ -102,5 +102,6 @@
     </main>
     <footer></footer>
     <script src="./assets/style.css"></script>
+    <script src="/assets/JS/script.js"></script>
   </body>
 </html>
