--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Fruktur&family=Lily+Script+One&family=Montserrat:wght@500&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./assets/CSS/style.css" />
+    <link rel="stylesheet" href="./assets/CSS/style.css" /> -->
     <title>Document</title>
   </head>
   <body>
@@ -37,7 +37,7 @@
       </div>
 
       <!-- explanation -->
-      <div id="about">
+      <!-- <div id="about">
         <div class="sidebar"> About </div>
         <div class="content">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed beatae
@@ -100,7 +100,7 @@
         </div>
       </div>
     </main>
-    <footer></footer>
-    <script src="./assets/style.css"></script>
+    <footer></footer> -->
+    <script src="./assets/JS/script.js"></script>
   </body>
 </html>
