--- a/index.html
+++ b/index.html
@@ -4,12 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css"
-    />
     <link
       href="https://fonts.googleapis.com/css2?family=Fruktur&family=Lily+Script+One&family=Montserrat:wght@500&display=swap"
       rel="stylesheet"
@@ -20,7 +16,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
     />
 
-    <link rel="stylesheet" href="./assets/CSS/style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <link
       type="text/css"
       rel="stylesheet"
@@ -47,8 +43,8 @@
     </header>
 
     <div class="">
+      <!-- Hero section -->
       <main>
-        <!-- Hero section -->
         <div class="responsive-img" id="hero"></div>
 
         <!-- card in middle with form for allergy maps -->
@@ -62,7 +58,7 @@
                 placeholder="park name"
               />
             </form>
-            <button class="" id="search-btn">Search</button>
+            <button class="" id="search-button">Search</button>
           </div>
         </div>
 
@@ -271,8 +267,7 @@
 
     <script src="https://api.mqcdn.com/sdk/place-search-js/v1.0.0/place-search.js"></script>
 
-    <script src="/assets/JS/script.js"></script>
+    <script src="/assets/js/script.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script src="./assets/style.css"></script>
   </body>
 </html>
